<resources>
    <string name="app_name">Rent-a-Boat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orders">Orders</string>
    <string name="feed">Feed</string>
    <string name="not_set_yet">Not set yet</string>
    <string name="login">Login</string>
    <string name="rent_a_boat">Rent-A-Boat</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="_15_sep_2018_rented_boat_in_canary_islands">15 Sep. 2018: Rented boat in Canary Islands</string>
    <string name="_31_aug_2018_rented_boat_in_mallorca">31 Aug. 2018: Rented boat in Mallorca</string>
    <string name="_20_aug_2018_rented_boat_in_barcelona">20 Aug. 2018: Rented boat in Barcelona</string>
    <string name="rent_now">Rent Now!</string>
</resources>
